How to win section is not finished

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,14 +8,8 @@
 
 // layout
 @import "layout/header";
-@import "layout/navigation";
-@import "layout/content";
-@import "layout/category";
-@import "layout/features";
-@import "layout/actions";
-@import "layout/footer";
+@import "layout/howto";
+@import "layout/grid";
 
 // components
 @import "components/banner";
-@import "components/button";
-@import "components/boxes";
