--- a/scss/settings/_colors.scss
+++ b/scss/settings/_colors.scss
@@ -114,7 +114,10 @@ $ads-color-palette: (
     ), 
 
     lp: (
-        light: #F5F5F7,
+        lighten: #2E005A,
+        light: #6D00AC,
+        dark: #230045,
+        yellow: #FDB724
     )
 );
 
