--- a/scss/components/_process.scss
+++ b/scss/components/_process.scss
@@ -1,13 +1,6 @@
 #landingpage{
-    .lpHowTo{
-        text-align: center;
-
-        &__boxes{
-            margin: 65px auto 0;
-        }
-
+    .lpProcess{
         &__box{
-            background-color: color(lp, light);
             padding: 30px 100px 30px 25px;
             clip-path: polygon(0% 0%, 80% 0, 100% 50%, 80% 100%, 0% 100%);
             display: flex;
@@ -17,39 +10,19 @@
             text-align: left;
         }
 
-        span.lpHowTo__number{
+        span.lpProcess__number{
             color: color(lp, yellow);
             font-weight: 700;
             font-size: 50px;
             margin-right: 25px;
-        }
-
-        .btn{
-            margin: 65px auto 0;
-        }
-
-        &__video{
-            width: 70%;
-            margin: 65px auto 0;
-
-            iframe{
-                aspect-ratio: 16/9;
-                width: 100%;
-                border-radius: 4px;
-                border: 5px solid color(gray, 0);
-            }
         }
     }
 }
 
 // laoyut 0
 .layout-0 #landingpage{
-    .lpHowTo{
+    .lpProcess{
         text-align: center;
-
-        &__boxes{
-            margin: 65px auto 0;
-        }
 
         &__box{
             background-color: color(lp, light);
@@ -61,7 +34,7 @@
             align-items: flex-start;
         }
 
-        span.lpHowTo__number{
+        span.lpProcess__number{
             margin-right: 0;
             margin-bottom: 5px;
         }
@@ -72,9 +45,37 @@
 @media only screen and (max-width: 980px){
     .mobile #landingpage,
     .mobileapp #landingpage{
-        .lpHowTo{
-            &__video{
-                width: 100%;
+        .lpProcess{
+            &__box{
+                background-color: color(lp, light);
+                padding: 30px;
+                clip-path: polygon(0% 0%, 80% 0, 100% 50%, 80% 100%, 0% 100%);
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+                align-items: flex-start;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 700px){
+    .mobile #landingpage,
+    .mobileapp #landingpage{
+        .lpProcess{
+            &__box{
+                background-color: color(lp, light);
+                padding: 20px 20px 50px;
+                clip-path: polygon(0% 0%, 100% 0, 100% 80%, 50% 100%, 0% 80%);
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+
+                span.lpProcess__number{
+                    margin-right: 0;
+                }
             }
         }
     }
