--- a/scss/layout/_competition.scss
+++ b/scss/layout/_competition.scss
@@ -1,17 +1,13 @@
 #landingpage{
     .lpCompetition{
         padding-top: 120px;
+        position: relative;
 
-        &__logo{
+        &__badge{
             position: absolute;
             top: 0;
             left: 50%;
-            transform: translate(-50%, -50%);
-        }
-
-        &__astronaut,
-        &__astronaut-image{
-            margin: 65px auto 0;
+            transform: translate(-50%, -85%);
         }
 
         .perex{
@@ -34,7 +30,6 @@
         }
 
         &__boxes{
-            margin: 65px auto 0;
             display: flex;
             flex-direction: row;
             justify-content: center;
