--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -56,7 +56,7 @@ html{
 #landingpage{
     font-size: 16px;
     margin: 0 auto;
-    padding: 0;
+    padding: 0 0 60px 0;
     overflow: hidden;
     position: relative;
     display: block;
@@ -74,11 +74,6 @@ html{
         *:not(.react-carousel *){
             box-sizing: border-box;
         }
-    }
-
-    header,
-    section{
-        padding: 50px 0;
     }
 
     ul{
@@ -123,16 +118,6 @@ html{
 @media only screen and (max-width: 550px){
     .mobile #landingpage,
     .mobileapp #landingpage{
-        section{
-            padding: 25px 0;
-        }
-
-        section{
-            &:last-of-type{
-                padding-bottom: 50px;
-            }
-        }
-
         .lpWrapper{
             padding: 0 15px;
         }
