Program section is not finished

--- a/scss/layout/_competition.scss
+++ b/scss/layout/_competition.scss
@@ -2,6 +2,7 @@
     .lpCompetition{
         padding-top: 120px;
         position: relative;
+        z-index: 100;
 
         &__badge{
             position: absolute;
