--- a/scss/features/_margin.scss
+++ b/scss/features/_margin.scss
@@ -1,6 +1,10 @@
 #landingpage{
-    .sectionMargin{
+    .blockMargin{
         margin: 65px auto 0;
+    }
+
+    .sectionMargin{
+        padding: 200px 0;
     }
 }
 
@@ -8,7 +12,7 @@
 @media only screen and (max-width: 700px){
     .mobile #landingpage,
     .mobileapp #landingpage{
-        .sectionMargin{
+        .blockMargin{
             margin: 45px auto 0;
         }
     }
