--- a/scss/features/_polygon.scss
+++ b/scss/features/_polygon.scss
@@ -1,7 +1,8 @@
 #landingpage{
     .addPolygon{
         background-color: color(lp, lighten);
-        clip-path: polygon(0 0, 100% 8%, 100% 100%, 0% 95%);
+        clip-path: polygon(0 0,100% 4%,100% 100%,0 97%);
+        overflow: visible;
     }
 }
 
