--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,6 +19,7 @@
 @import "components/photos";
 @import "components/process";
 @import "components/video";
+@import "components/box-text";
 
 // features
 @import "features/polygon";
