--- a/scss/layout/_showroom.scss
+++ b/scss/layout/_showroom.scss
@@ -12,3 +12,15 @@
         }
     }
 }
+
+// mobile
+@media only screen and (max-width: 700px){
+    .mobile #landingpage,
+    .mobileapp #landingpage{
+        .lpShowroom{
+            .perex--short{
+                text-align: left;
+            }
+        }
+    }
+}
