--- a/scss/settings/_typography.scss
+++ b/scss/settings/_typography.scss
@@ -132,14 +132,12 @@
     }
 
     // list items
-    .lpListItems{
-        margin: 10px auto 0;
+    .lpItems{
         padding-left: 0;
+        margin-top: 20px;
 
         &__item{
-            color: color(gray, 6);
-            font-size: size(14);
-            line-height: size(24);
+            color: color(gray, 0);
             margin-top: 8px;
             padding-left: 32px;
             position: relative;
@@ -148,11 +146,11 @@
                 content: '';
                 position: absolute;
                 left: 0;
-                top: 1px;
-                width: 20px;
-                height: 20px;
-                background: url('https://cdn.alza.cz/Foto/or/lp/usetrete/build/img/check-blue.svg') center no-repeat;
-                background-size: 100%;
+                top: 9px;
+                width: 8px;
+                height: 8px;
+                background-color: color(lp, yellow);
+                border-radius: 100px;
             }
 
             strong{
@@ -246,6 +244,15 @@
         }
 
         .body-1--subHeadline{
+            max-width: 100%;
+        }
+    }
+}
+
+@media only screen and (max-width: 700px){
+    .mobile #landingpage,
+    .mobileapp #landingpage{
+        .perex--short{
             max-width: 100%;
         }
     }
