--- a/scss/layout/_showroom.scss
+++ b/scss/layout/_showroom.scss
@@ -3,6 +3,7 @@
         background-color: color(lp, lighten);
         position: relative;
         z-index: 90;
+        padding-bottom: 120px;
 
         &__badge{
             position: absolute;
