--- a/scss/layout/_competition.scss
+++ b/scss/layout/_competition.scss
@@ -1,6 +1,6 @@
 #landingpage{
     .lpCompetition{
-        padding-top: 120px;
+        padding-top: 200px;
         position: relative;
         z-index: 100;
 
@@ -8,7 +8,7 @@
             position: absolute;
             top: 0;
             left: 50%;
-            transform: translate(-50%, -85%);
+            transform: translate(-50%, 0);
         }
 
         .perex{
