--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,30 +1,7 @@
 #landingpage{
     .lpHeader{
-        .lpWrapper{
-            animation: intro .6s ease-in;
-        }
-
-        .notMoveH1{
-            color: color(gray, 9);
-        }
-
-        .perex{
-            font-size: 18px;
-            line-height: 27px;
-        }
-
-        @keyframes intro {
-            0% {
-                opacity: 0;
-                filter: blur(10px);
-                transform: translateY(15px);
-            }
-            100% {
-                opacity: 1;
-                filter: blur(0);
-                transform: translateY(0);
-            }
-        }
+        background: url('https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/background.png') center no-repeat;
+        background-size: cover;
     }
 }
 
@@ -33,9 +10,7 @@
     .mobile #landingpage,
     .mobileapp #landingpage{
         .lpHeader{
-            .perex--subHeadline{
-                max-width: 100%;
-            }
+            
         }
     }
 }
