--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,6 +12,7 @@
 @import "layout/days";
 @import "layout/showroom";
 @import "layout/competition";
+@import "layout/footer";
 
 // components
 @import "components/timeline";
@@ -28,3 +29,4 @@
 @import "features/polygon";
 @import "features/margin";
 @import "features/grid";
+@import "features/dots";
