--- a/scss/components/_schedule.scss
+++ b/scss/components/_schedule.scss
@@ -1,4 +1,4 @@
-#landingpage{
+#landingpage.lp{
     .lpSchedule{
         display: flex;
         justify-content: space-between;
@@ -34,8 +34,8 @@
 
 // mobile
 @media only screen and (max-width: 750px){
-    .mobile #landingpage,
-    .mobileapp #landingpage{
+    .mobile #landingpage.lp,
+    .mobileapp #landingpage.lp{
         .lpSchedule{
             flex-direction: column;
 
