--- a/scss/components/_timeline.scss
+++ b/scss/components/_timeline.scss
@@ -1,4 +1,4 @@
-#landingpage{
+#landingpage.lp{
     .lpTimeline{
         text-align: left;
 
@@ -71,8 +71,8 @@
 
 // mobile
 @media only screen and (max-width: 750px){
-    .mobile #landingpage,
-    .mobileapp #landingpage{
+    .mobile #landingpage.lp,
+    .mobileapp #landingpage.lp{
         .lpTimeline{
             .lpItems{
                 &__bullet{
