--- a/scss/components/_video.scss
+++ b/scss/components/_video.scss
@@ -1,4 +1,4 @@
-#landingpage{
+#landingpage.lp{
     .lpVideo{
         width: 70%;
 
@@ -13,8 +13,8 @@
 
 // mobile
 @media only screen and (max-width: 980px){
-    .mobile #landingpage,
-    .mobileapp #landingpage{
+    .mobile #landingpage.lp,
+    .mobileapp #landingpage.lp{
         .lpVideo{
             width: 100%;
         }
