--- a/scss/features/_margin.scss
+++ b/scss/features/_margin.scss
@@ -1,4 +1,4 @@
-#landingpage{
+#landingpage.lp{
     .blockMargin{
         margin: 65px auto 0;
     }
@@ -9,9 +9,18 @@
 }
 
 // mobile
+@media only screen and (max-width: 750px){
+    .mobile #landingpage.lp,
+    .mobileapp #landingpage.lp{
+        .sectionMargin{
+            padding: 100px 0;
+        }
+    }
+}
+
 @media only screen and (max-width: 700px){
-    .mobile #landingpage,
-    .mobileapp #landingpage{
+    .mobile #landingpage.lp,
+    .mobileapp #landingpage.lp{
         .blockMargin{
             margin: 45px auto 0;
         }
