--- a/scss/layout/_competition.scss
+++ b/scss/layout/_competition.scss
@@ -72,6 +72,16 @@
     .mobile #landingpage,
     .mobileapp #landingpage{
         .lpCompetition{
+            padding-top: 100px;
+
+            &__badge{
+                position: relative;
+                top: auto;
+                left: auto;
+                transform: translate(0,0);
+                margin: 0 auto 40px;
+            }
+            
             &__box{
                 width: calc(50% - 10px);
             }
@@ -79,7 +89,7 @@
     }
 }
 
-@media only screen and (max-width: 450px){
+@media only screen and (max-width: 440px){
     .mobile #landingpage,
     .mobileapp #landingpage{
         .lpCompetition{
