--- a/scss/layout/_program.scss
+++ b/scss/layout/_program.scss
@@ -2,6 +2,7 @@
     .lpProgram{
         background-color: color(lp, lighten);
         padding: 50px 0;
+        z-index: 5;
 
         &__image{
             position: absolute;
@@ -22,6 +23,23 @@
                         margin: 30px auto 0;
                     }
                 }
+            }
+        }
+    }
+}
+
+// media
+@media only screen and (max-width: 750px){
+    .mobile #landingpage,
+    .mobileapp #landingpage{
+        .lpProgram{
+            padding: 0;
+            
+            &__image{
+                position: relative;
+                margin: 0 auto 40px;
+                top: auto;
+                left: auto;
             }
         }
     }
