--- a/scss/layout/_showroom.scss
+++ b/scss/layout/_showroom.scss
@@ -14,7 +14,23 @@
     }
 }
 
-// mobile
+// media
+@media only screen and (max-width: 750px){
+    .mobile #landingpage,
+    .mobileapp #landingpage{
+        .lpShowroom{
+            padding-bottom: 70px;
+            
+            &__badge{
+                position: relative;
+                top: auto;
+                left: auto;
+                margin: 0 auto 40px;
+            }
+        }
+    }
+}
+
 @media only screen and (max-width: 700px){
     .mobile #landingpage,
     .mobileapp #landingpage{
