--- a/scss/layout/_days.scss
+++ b/scss/layout/_days.scss
@@ -12,6 +12,10 @@
             left: 60px;
             top: 0;
         }
+
+        &__alzak{
+            border-radius: 4px;
+        }
     }
 }
 
