Updated changes - scroll animation is not finished

--- a/scss/components/_invite.scss
+++ b/scss/components/_invite.scss
@@ -8,6 +8,10 @@
 
         picture{
             flex: 1;
+
+            img{
+                animation: float 6s ease-in-out infinite;
+            }
         }
 
         &__textWrapper{
