--- a/scss/layout/_program.scss
+++ b/scss/layout/_program.scss
@@ -8,6 +8,7 @@
             position: absolute;
             top: -8%;
             left: 60px;
+            animation: float 6s ease-in-out infinite;
         }
 
         .lpGuest{
