--- a/scss/layout/_showroom.scss
+++ b/scss/layout/_showroom.scss
@@ -10,6 +10,7 @@
             top: -12%;
             left: 5%;
             z-index: 91;
+            animation: pop .4s ease-in forwards;
         }
     }
 }
