--- a/scss/components/_photos.scss
+++ b/scss/components/_photos.scss
@@ -5,11 +5,23 @@
         &__star{
             @include center;
             z-index: 10;
+            opacity: 0;
+            animation: pop-star .33s .8s ease-in forwards;
         }
 
         &__photo{
             border-radius: 4px;
             border: 5px solid color(gray, 0);
+            opacity: 0;
+            width: 100%;
+
+            &--1{
+                animation: slide-down .4s ease-in forwards;
+            }
+
+            &--2{
+                animation: slide-down .4s .2s ease-in forwards;
+            }
         }
     }
 }
