--- a/scss/components/_process.scss
+++ b/scss/components/_process.scss
@@ -9,6 +9,19 @@
             align-items: center;
             text-align: left;
             background-color: color(lp, light);
+            opacity: 0;
+
+            &:nth-of-type(1){
+                animation: slide-down .4s ease-in forwards;
+            }
+
+            &:nth-of-type(2){
+                animation: slide-down .4s .2s ease-in forwards;
+            }
+
+            &:nth-of-type(3){
+                animation: slide-down .4s .4s ease-in forwards;
+            }
         }
 
         span.lpProcess__number{
