--- a/scss/components/_usp.scss
+++ b/scss/components/_usp.scss
@@ -1,6 +1,24 @@
 #landingpage.lp{
     .lpUsp{
         &__box{
+            opacity: 0;
+
+            &:nth-of-type(1){
+                animation: slide-down .4s ease-in forwards;
+            }
+
+            &:nth-of-type(2){
+                animation: slide-down .4s .2s ease-in forwards;
+            }
+
+            &:nth-of-type(3){
+                animation: slide-down .4s .4s ease-in forwards;
+            }
+
+            &:nth-of-type(4){
+                animation: slide-down .4s .6s ease-in forwards;
+            }
+
             svg{
                 width: 64px;
                 height: 64px;
