--- a/scss/components/_video.scss
+++ b/scss/components/_video.scss
@@ -7,6 +7,14 @@
             width: 100%;
             border-radius: 4px;
             border: 5px solid color(gray, 0);
+            opacity: 0;
+            animation: slide-down .4s ease-in forwards;
+        }
+    }
+
+    .runAnimation--active{
+        iframe{
+            animation: slide-down .4s ease-in forwards;
         }
     }
 }
