--- a/scss/layout/_competition.scss
+++ b/scss/layout/_competition.scss
@@ -9,6 +9,7 @@
             top: 0;
             left: 50%;
             transform: translate(-50%, 0);
+            opacity: 0;
         }
 
         .perex{
@@ -37,6 +38,8 @@
             align-items: stretch;
             flex-wrap: wrap;
             gap: 40px 20px;
+            opacity: 0;
+            animation: slide-down .4s ease-in forwards;
         }
 
         &__box{
