--- a/scss/layout/_program.scss
+++ b/scss/layout/_program.scss
@@ -4,15 +4,21 @@
         padding: 50px 0;
         z-index: 5;
 
-        &__image{
+        &__imageWrapper{
+            opacity: 0;
             position: absolute;
             top: -8%;
             left: 60px;
+        }
+
+        &__image{
             animation: float 6s ease-in-out infinite;
         }
 
-        .lpGuest{
+        .lpGuests{
             &__box{
+                opacity: 0;
+
                 img{
                     margin: 0 auto;
                 }
@@ -24,6 +30,22 @@
                         margin: 30px auto 0;
                     }
                 }
+            }
+        }
+    }
+
+    .lpProgram__imageWrapper.runAnimation--active{
+        animation: pop .4s ease-in forwards;
+    }
+
+    .lpProgram .lpGuests.runAnimation--active{
+        .lpGuests__box{
+            &:nth-of-type(1){
+                animation: pop .4s ease-in forwards;
+            }
+
+            &:nth-of-type(2){
+                animation: pop .4s .2s ease-in forwards;
             }
         }
     }
