--- a/scss/components/_process.scss
+++ b/scss/components/_process.scss
@@ -10,18 +10,6 @@
             text-align: left;
             background-color: color(lp, light);
             opacity: 0;
-
-            &:nth-of-type(1){
-                animation: slide-down .4s ease-in forwards;
-            }
-
-            &:nth-of-type(2){
-                animation: slide-down .4s .2s ease-in forwards;
-            }
-
-            &:nth-of-type(3){
-                animation: slide-down .4s .4s ease-in forwards;
-            }
         }
 
         span.lpProcess__number{
@@ -29,6 +17,20 @@
             font-weight: 700;
             font-size: 50px;
             margin-right: 25px;
+        }
+    }
+
+    .lpProcess.runAnimation--active{
+        .lpProcess__box:nth-of-type(1){
+            animation: slide-down .4s ease-in forwards;
+        }
+
+        .lpProcess__box:nth-of-type(2){
+            animation: slide-down .4s .2s ease-in forwards;
+        }
+
+        .lpProcess__box:nth-of-type(3){
+            animation: slide-down .4s .4s ease-in forwards;
         }
     }
 }
