--- a/scss/components/_video.scss
+++ b/scss/components/_video.scss
@@ -1,21 +1,18 @@
 #landingpage.lp{
     .lpVideo{
         width: 70%;
+        opacity: 0;
 
         iframe{
             aspect-ratio: 16/9;
             width: 100%;
             border-radius: 4px;
             border: 5px solid color(gray, 0);
-            opacity: 0;
-            animation: slide-down .4s ease-in forwards;
         }
     }
 
-    .runAnimation--active{
-        iframe{
-            animation: slide-down .4s ease-in forwards;
-        }
+    .lpVideo.runAnimation--active{
+        animation: slide-down .4s ease-in forwards;
     }
 }
 
