--- a/scss/features/_animations.scss
+++ b/scss/features/_animations.scss
@@ -54,6 +54,22 @@
         }
     }
 
+    @keyframes pop-badge{
+        0% {
+            opacity: 1;
+            filter: blur(20px);
+            transform: translateX(-50%) scale(.6);
+        }
+        50% {
+            transform: translateX(-50%) scale(1.08);
+        }
+        100% {
+            opacity: 1;
+            transform: translateX(-50%) scale(1);
+            filter: blur(0);
+        }
+    }
+
     @keyframes figurine-1 {
         0% {
             transform: translatey(40px);
